--- a/gen/me/enerccio/sp/parser/.gitignore
+++ b/gen/me/enerccio/sp/parser/.gitignore
@@ -4,3 +4,9 @@
 /pythonLexer.tokens
 /pythonListener.java
 /pythonParser.java
+/formatter.tokens
+/formatterBaseListener.java
+/formatterLexer.java
+/formatterLexer.tokens
+/formatterListener.java
+/formatterParser.java
