more wip on format()

--- a/gen/me/enerccio/sp/parser/.gitignore
+++ b/gen/me/enerccio/sp/parser/.gitignore
@@ -10,3 +10,18 @@
 /formatterLexer.tokens
 /formatterListener.java
 /formatterParser.java
+/formatterLexerBaseListener.java
+/formatterLexerLexer.java
+/formatterLexerLexer.tokens
+/formatterLexerListener.java
+/formatterLexerParser.java
+/formatter.java
+/formatterParser.tokens
+/formatterParserBaseListener.java
+/formatterParserListener.java
+/formatLexer.java
+/formatLexer.tokens
+/formatParser.java
+/formatParser.tokens
+/formatParserBaseListener.java
+/formatParserListener.java
